general.yaml
# servicio_python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicio-python-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicio-python
  template:
    metadata:
      labels:
        app: servicio-python
    spec:
      containers:
        - name: servicio-python
          image: jadevlaplata/servicio_python:01
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "30m"   # Límite de CPU para el Pod (milicpus)
              memory: "90Mi"  # Límite de memoria para el Pod
            #requests:
              #cpu: "100m"   # Recursos iniciales de CPU para el Pod (milicpus)
              #memory: "64Mi"  # Recursos iniciales de memoria para el Pod

---
# servicio_python-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: servicio-python-service
  namespace: default
spec:
  selector:
    app: servicio-python
  ports:
    - protocol: TCP
      port: 80  ###puerto hacia afuera
      targetPort: 5000 ### puerto hacia adentro del cluster
  type: NodePort

---
# servicio_python-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicio-python-ingress
  namespace: default
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicio-python-service
                port:
                  number: 80
