servicio_python-ingress.yaml
# servicio_python-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicio-python-ingress
  namespace: default
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicio-python-service
                port:
                  number: 80
